--- a/postgresql/Gemfile
+++ b/postgresql/Gemfile
@@ -6,6 +6,11 @@ gem 'rails', '4.0.2'
 # Use postgresql as the database for Active Record
 gem 'pg'
 
+gem 'flowdock'
+
+#gem 'rspec
+gem 'devise'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
 
